Update DockerFiles for all services

--- a/services/extraction/Dockerfile
+++ b/services/extraction/Dockerfile
@@ -1,16 +1,22 @@
-#Dockerfile container for extraction service
+# Image to work on (slim for efficiency)
+FROM python:3.11-slim
 
-#Image to work on
-FROM python:3.11
+# Don’t create .pyc trash and logs appear immediately
+ENV PYTHONDONTWRITEBYTECODE=1 PYTHONUNBUFFERED=1
 
-#Create folder inside container for clarity
-WORKDIR /extraction-service
+# Work inside /app
+WORKDIR /app
 
-#Copy the code from the directory in the container
-COPY . .
-
-#Install dependencies on the container
+# Layer caching for faster rebuilds
+# Install dependancies first
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-#Run service main.py
-CMD ["python", "main.py"]
+# Copy the rest of the app
+COPY . .
+
+# Expose the intended port
+EXPOSE 8000
+
+# Start FastAPI the standard way
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
