--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,18 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      #Delete unnecesary tools to free up disk space
+      - name: Free up disk space
+        run: |
+          echo "Cleaning instance space"
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /opt/ghc
+          sudo rm -rf "/usr/local/lib/android"
+          sudo apt clean
+
+          # Delete posible unused Docker data
+          docker system prune -af || true
+
       #Build and start the Docker services defined in the docker-compose.ci.yml file
       - name: Start Docker services
         run: docker compose -f docker-compose.yml up -d --build
