--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,16 +24,16 @@ services:
     build: ./services/ingestion
     container_name: ingestion-service
     environment:
-      - SERVICE_NAME=ingestion-service
+      - SERVICE_NAME=ingestion
       - SERVICE_PORT=5001
       - RABBITMQ_URL=amqp://${RABBITMQ_USER:-admin}:${RABBITMQ_PASS:-admin}@rabbitmq:5672/
       - DATA_ROOT=/data
       - LOG_LEVEL=INFO
-      - DATA_SOURCE=https://www.lancaster.ac.uk/academic-standards-and-quality/regulations-and-policies/manual-of-academic-regulations-and-procedures/
+      - BASE_URL=https://www.lancaster.ac.uk/academic-standards-and-quality/regulations-and-policies/manual-of-academic-regulations-and-procedures/
     ports:
       - "5001:8000"
     volumes:
-      - data:/data
+      - ./data:/data
     depends_on:
       rabbitmq:
         condition: service_healthy
