--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,11 +29,11 @@ services:
       - RABBITMQ_URL=amqp://${RABBITMQ_USER:-admin}:${RABBITMQ_PASS:-admin}@rabbitmq:5672/
       - DATA_ROOT=/data
       - LOG_LEVEL=INFO
-      - DATA_SOURCE=https://www.lancaster.ac.uk/academic-standards-and-quality/regulations-and-policies/manual-of-academic-regulations-and-procedures/
+      - BASE_URL=https://www.lancaster.ac.uk/academic-standards-and-quality/regulations-and-policies/manual-of-academic-regulations-and-procedures/
     ports:
       - "5001:8000"
     volumes:
-      - data:/data
+      - ./data:/data
     depends_on:
       rabbitmq:
         condition: service_healthy
@@ -57,7 +57,7 @@ services:
     ports:
       - "5002:8000"
     volumes:
-      - data:/data
+      - ./data:/data
     depends_on:
       rabbitmq:
         condition: service_healthy
@@ -82,7 +82,7 @@ services:
     ports:
       - "5003:8000"
     volumes:
-      - data:/data
+      - ./data:/data
     depends_on:
       rabbitmq:
         condition: service_healthy
@@ -107,7 +107,7 @@ services:
     ports:
       - "5004:8000"
     volumes:
-      - data:/data
+      - ./data:/data
     depends_on:
       rabbitmq:
         condition: service_healthy
@@ -135,7 +135,7 @@ services:
     ports:
       - "5005:8000"
     volumes:
-      - data:/data
+      - ./data:/data
     depends_on:
       rabbitmq:
         condition: service_healthy
@@ -161,7 +161,7 @@ services:
     ports:
       - "5006:8000"
     volumes:
-      - data:/data
+      - ./data:/data
     depends_on:
       rabbitmq:
         condition: service_healthy
@@ -174,14 +174,8 @@ services:
     restart: unless-stopped
 
 volumes:
-  data:
   rabbitmq_data:
 
 networks:
   marp_net:
     driver: bridge
-    
-  
-    
-    
-
