--- a/services/indexing/requirements.txt
+++ b/services/indexing/requirements.txt
@@ -1,3 +1,5 @@
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torch>=2.7,<2.8
 fastapi>=0.110,<0.120
 uvicorn[standard]>=0.23,<0.31
 aio-pika>=9,<10
