--- a/services/monitoring/Dockerfile
+++ b/services/monitoring/Dockerfile
@@ -8,7 +8,7 @@ ENV PYTHONDONTWRITEBYTECODE=1 PYTHONUNBUFFERED=1
 WORKDIR /app
 
 # Layer caching for faster rebuilds
-# Install dependancies first
+# Install dependencies first
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
