--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -106,6 +106,7 @@ services:
       - LOG_LEVEL=INFO
       - CHROMA_DIR=/data/index
       - CHROMA_COLLECTION=marp_docs
+      - RETRIEVAL_PUBLISH_EVENTS=true
     ports:
       - "5004:8000"
     volumes:
