Explicetly set embedding model

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,6 +105,7 @@ services:
       - DATA_ROOT=/data
       - LOG_LEVEL=INFO
       - CHROMA_DIR=/data/index
+      - EMBEDDING_MODEL=sentence-transformers/all-MiniLM-L6-v2
       - CHROMA_COLLECTION=marp_docs
       - RETRIEVAL_PUBLISH_EVENTS=true
     ports:
