--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,29 @@ on:
       - develop
 
 jobs:
+  python-tests-indexing:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+
+      - name: Install dependencies
+        run: |
+          cd services/indexing
+          pip install -r requirements.txt
+          pip install pytest
+
+      - name: Run pytest
+        run: |
+          cd services/indexing
+          pytest -v
+
   docker-services:
     runs-on: ubuntu-latest
 
@@ -121,6 +144,7 @@ jobs:
       - name: Stop Docker services
         if: always()
         run: docker compose -f docker-compose.yml down -v
+
 
 
     
